fix project width on smaller resolutions

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -203,11 +203,11 @@ button.language-switcher {
      } 
     a.nav-previous {
         right: 30px;
-        background-image: url('/admin/wp-content/themes/pop/public/media/arrow-navigation-right.png');
+        background-image: url('/wp-content/themes/pop/public/media/arrow-navigation-right.png');
     }
     a.nav-next {
         left: 30px;
-        background-image: url('/admin/wp-content/themes/pop/public/media/arrow-navigation-left.png');
+        background-image: url('/wp-content/themes/pop/public/media/arrow-navigation-left.png');
     }
 }
 
